[gd_scene load_steps=6 format=2]

[ext_resource path="res://Module/ModuleScript/NotGate.gd" type="Script" id=1]
[ext_resource path="res://Pin/Pin.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/NotGate.png" type="Texture" id=3]
[ext_resource path="res://Assets/LED/SingleLED.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 24 )

[node name="NotGate" type="Node2D"]
script = ExtResource( 1 )

[node name="Pin_A" parent="." instance=ExtResource( 2 )]
position = Vector2( 16, 0 )
PinMode = 1

[node name="Pin_R" parent="." instance=ExtResource( 2 )]
position = Vector2( 16, 48 )
rotation = 3.14159
PinMode = 1

[node name="NotGateBG" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="SingleLED_A" parent="NotGateBG" instance=ExtResource( 4 )]
position = Vector2( 16, 6 )
animation = "Mini"

[node name="SingleLED_R" parent="NotGateBG" instance=ExtResource( 4 )]
position = Vector2( 16, 42 )
animation = "Mini"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 16, 24 )
shape = SubResource( 1 )
